@@ -21,6 +21,7 @@ DIST gsutil_4.4.tar.gz 2165629 SHA256 aa1e906d46ef04a6a2c65b38ce95b96575c7640377
 DIST gsutil_4.5.tar.gz 2196988 SHA256 ab8dd64754be902a41dc696f2d186dcf232ef959b40e24bf56fd6ae2940ed822 SHA512 a8e1ac6f6aa47727cb90f335253f0a8f0c4a04631695c1be63c1276f0202a71770c8046039baaf5fa4b31100a8f85073ea9cf5e283b41902d9ef58f84704bfc8 WHIRLPOOL d7d8c3078722aa692369d288c9621754d6df6f0aa70eb6608cac75fd21c9825c577dbeef64f1615dbace2f6ac7e1167a820c0047aa732c1cdf8bde6462fd0c15
 DIST gsutil_4.6.tar.gz 2201289 SHA256 ba811fe4dd55a138cdc7ce41622aff5bc9f93503b012ea3abb47bc7524004db7 SHA512 66699451b6b6c030ed553b364565f1837caa252c7924c7184af695b215bbc3c1bb0d7893f18cf6ae1d8c2b466bb1a28bcc31fd908d867852832b4aa4409dfc49 WHIRLPOOL 59e179bd94a4c80f0223ceb76ffb1eaf5fcef445f6e9039c01024c49db5342ded90ab0e87f81df403f6f0f5a873bf7c362f4df594cf53d02668bbcdb7ff1c331
 DIST gsutil_4.7.tar.gz 3133131 SHA256 8f3892127f20a49d091b00a77c584643becf1a413c7f35512edffd12951657cb SHA512 744ea1a916ed1ba5125cdbc549f4df728e709b8becc91f076e31abd3cca22bda70a0b78b1e29e3773ca4b86961cc2b2320c001009b716a232334667906611b21 WHIRLPOOL 6d7fbb1c61e7b544cb2ca3ffa54616f3b7a1e7b1c1af128933a4c69e0d460a6017bb4e7574b09c05d4f2700d265ab9334ff7278b8b81f9fe0b0807a1bfcdbe67
+DIST gsutil_4.8.tar.gz 2128639 SHA256 693768d31597a165d44a90f0eb4a49c36a41c47508fe8370317f8133ea420890 SHA512 e9547957e43f66d9e157d1825aa27e0accae313a199008dbb38d8e5c89586eb44bc6d87a9c834a157959ebf840a5598d4aa8fbb1adb437d804ec74e51a3bc3c1 WHIRLPOOL 731ecc3a5ff4fc425c0b8b57a975bcbd34cd96df057be5d645fdeaf1fb4a3c7a3423fadeced738cf99291cc0e3281d8a9e49eb442c806d9a10e394a427979128
 EBUILD gsutil-3.14.ebuild 1447 SHA256 4b2d702cb5c5425dbf7dbe30d9e2efb98f823a7d66e5e2cc53f999ec9981207f SHA512 5a32cffb3cdd40db6d71829ca09de0712665f952a1313c5870086d8d0c502058f5e1e6401ea03100b6e9157d07f29996b28308dfd358c82aa37ad053c67f970d WHIRLPOOL bb3b2acb93b7ef2202b979add5bd06a156c08dd8b1dc6d05815181971f6bb30e0e935374d66176682e934b838308ed84ccbcc36b27107bd7651a66f4841f9d9b
 EBUILD gsutil-3.18.ebuild 1447 SHA256 7b06511eaf43b9921a350907a34d8d71c34e1238b00b613ce76ff2189603bd5a SHA512 e281825061d3ee228b630b90af0f328cf70be044973d26863c9186342d951a5a1ec716cdad2d839a148f1b733241f1e099494819ce6ca5e3b30ca83fc05a4bc5 WHIRLPOOL b57cc0cba4f966ac2e561646450d23d937bc184045926584c020419689fc869fad7c5fb08a555d5e43c11b9e48774984456e436fc316f2776f4a39220d374537
 EBUILD gsutil-3.21.ebuild 1365 SHA256 dc4b93942945c5da7791c7392fb58027d40e3184fdf6a0226a7a8936f73711a0 SHA512 62152792fb90f13e3eadf1a826cd572a2427bfd66bc9d3a493422d6972b55e6362e1709f7a7f1348ed28222a8f14b087b1887273abd9837d1d9ba8f67e9fe1aa WHIRLPOOL fac57614487bc0407667bdfe831d597eb29252346b1fe707fbf4bdc52237cf01c72033d76da77c5c042bf240c81284529e9ea39ceba38c3dd7e3484d12b78cfe
@@ -32,22 +33,23 @@ EBUILD gsutil-4.4.ebuild 1385 SHA256 6d902b9ae5751e63c1a0262a0e0fd60b513deead2a9
 EBUILD gsutil-4.5.ebuild 1384 SHA256 07cd6b768de6c9efe44fef4e04c37ce1635497d1d4a0637b6b3498239b6de551 SHA512 73de44e3361a8e9861e996df74defdfee8a39eb713ee73e56fa26c8f541a4afe5ee412d091e13b6cc6a15cf71512962b350f1edb54aaa7ddc09beb91c775d974 WHIRLPOOL e7f4980c4c61d300ba601796aef6fa50086cd8898a5e13fb374926110f2bb8984b18b35ef48caa09105871e6c6fc1adc2d87851165ea8c67eb71de5c747ef64c
 EBUILD gsutil-4.6.ebuild 1384 SHA256 d259d6570bae3465732732083ddc5ddd72164a7388568938511b348a86b83c4b SHA512 9822526d6c4cacac9c42cabadf3ddb534a5c26fe548424667c3db73938003a10bd21cca61c7fb07b7970a158f509cdb76610f356c1b181435806db191b8849bb WHIRLPOOL b4eee622a7ba8b74dab580977156ce74769982e682d5eec4b3eefae8cc9a37db03b3ed3318ee278b7bc141fe2f725eabc3c5192e64d02429c375554cad3dfb6b
 EBUILD gsutil-4.7.ebuild 1415 SHA256 2b81fe06fdb90ccae07273ba25919f2c268c86be01bd2a68f9544f38e7d9f405 SHA512 bf841e447ff7a361db9d90652a52407312e4dde7404950049925b63f9e8ee18fc5179cdf791e76390e0627d454bb0d5ec3912624b77e74da4243342c4e370ea1 WHIRLPOOL 2735bf9dcd75ddf51e6f22a6cf44e145adc51bdc76c639bd9ff3c664ec055067a1e16cc49d002a1c4ad608d6d7f5242ba7017c369a6984d3d809babb5a0f567b
-MISC ChangeLog 2846 SHA256 38d010b2882742758aa593a3ecf5b8782faeea6d6bdbf1b51a8633406fb97cd0 SHA512 318a61cf85a4688c2c5b19916aca67938bf38eb0e7c32516f93a76116d56f3192b2ce7aeb88e5ee9dfa4da876ba86591a2ffd9a138f62e32441537584290e33f WHIRLPOOL 33081685a21bdab67e590d0077866a5b2a007c3daecb2c097e32241bf8ddf7a987a302d55c18428bd404f383a67532566507647b2bb9c626556005190ec50d3f
+EBUILD gsutil-4.8.ebuild 1359 SHA256 c0c33b2fb36a5b7e03c739aba8c393c0a649b8dd5c6251c24ef2e88c9771c2d5 SHA512 fc26c5b8178e56e69bfae815f88e0942e28c01f480f6c61c03e09d94ca7df659562fb584ea1f7af71f4905ae62108afdf323f81c361b6a226b525656d70f8b4e WHIRLPOOL b09e11873a1b7dbbef9203055264b48f63a13cba7c4ba8a6d59ebd9baf50f6503ff9a50cdc05f6fe4dd7a25220580becb108ed3287b50659cd3a1e44f35f10e0
+MISC ChangeLog 2960 SHA256 51547c1fd686a0892271e6488d442665668054e080f13624f41c8564d9bccb63 SHA512 ad3e614199e6009785b5ed43f98deb48e4daedb877cc37fafd7eec1a8c0e90443fb7fd0925712bcd08e72610c50ae92ac44e6a2dc95820807cd33007a4c20c77 WHIRLPOOL bf05957797f3d8c0950b3c93370e60b76c11227ec2c2cfb69af92ba966c3e622f344e3b2939bf64263e755cd8e2b5b72a0a777fd52cd3040705987974ea1db46
 MISC metadata.xml 279 SHA256 2f5ae61fef1327d85bd4b0fa86038ee21e3874a6e7fbfef8f293868aff24e414 SHA512 99e70099183392c5d73cd994c35ac73b958dae2f542e43b9da84c12528161f6a44b043be24a8f1541f8080a4f49a9215f9fc8e5076718d7cd0d0ed4e531872da WHIRLPOOL 39bc89a7f235cb2f5c10f77a0decb0c45cc5bd322202f50100c19e84db22fe99610c3f858bf995e6a6b26ec2f238c2873981eab24c1f9086c04c439eae55d8ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUo1eRAAoJEPGu1DbS6WIADJwP+wbDUFtgj68jNE6jQdyQP/f0
-zFW9+4vP+TU6iOD6Pwn6GaA0Qep3miiYJDtKRfbOJnNgMPFKZVPLqsKdl6amPuAO
-GAUNWB+LU3Lig8A8TKgGtpoTy5b6krYOI656B0phOurQXhiOcU9uz2+KuZFbcuFR
-HfjA9i7xCfExylGSa+nNjPfvLuzAgKvNm7SZdAEPICwGDdsNvxulXJILT0r7Tg3d
-Fxpq84sxId6Xa7KjWoGfZX0TRATJx/Bui+fhcAp9kvRSjCsnNv6b/b9JgBo11UEb
-XITm069PqZJagu42JDCJI2+mC8pQJd5KWKGgrnDke4P2woZKbLrxP6wRIe+ZkRM9
-tx35Xz6dDClLuZhviztzt0fmyZPyUD482o4AvLRYUnu8RvehgvD1I3iBcrz0AJbO
-ByZpTdSX9tIw4/h62WnMrSY68pQW+Sx4GGvAa+PwGPPzRxJgAUAEznKNoQ3OPUkD
-+a3GBblLj6nhE83bvlvu1zTTkGXaOEiJVKlEhDjMHKKIwEjeJPVHmF0acHfAMTkg
-cqYPDCSzRGG4x6eMP4MSMz6TASQZA0kQE4J2l8AQEj8dgw1lvpMa9pSpn0in/tBm
-mfQNKON5Sc+y70BTXa3AHF/iv2P7uIQzIsp+J/C1lwsr3x8QA/ZsXkIEn2Lvse+V
-b9XcpQQnVe134vVk+DYl
-=H1L+
+iQIcBAEBCAAGBQJUyAwaAAoJEPGu1DbS6WIAdgYP/1gvLJ1FJPpHGZWqILDcJOxy
+nXQRhb/fDkUAtAW4xr7ceFZU9SzsRwq3dUkvErHKy+jLGl1E44qNiNHoXbnmvhEF
+jzMfmQGjZdHRO3L7zrJndYC+92zISbSOEZkzyKRM3qGKsZ6LNlsGUQ7vuwLCGZmt
+vj4SHtUEjRvulqkCnJp87TcR5/p/EL/KFSVMG3IQTHRKX0Qb8nclrkkqEI8fuirb
+q0YkJrGJJZt4/TCxlmaigZcgPDc1tfGcYeI4l/b+rFOro+pOI7o+sxpITYwB1xcu
+7n8vvUIsAogye7haQrq/6TH/DiAaEF3q22QMDvp9hLZdQtLtRwADmK4FRvVd/C4Z
+5jh9tbc+4fFQYJKXHwlU5E1b2Q+9PZ0Sem0IiSwEmDqAYoRV75395M2npzTnO5Yz
+4NS7cR+HxqT9hKAxpdUDwgtYLNUaFSltwGz5AQbqphCuz/JISVoDlZjRKXYfgBqy
+jO52GAdnUKY6X5/1tG0gAtt32W3Xl49qL0oPEJPXsa3ky1ZJr6dfeTmjqtNMhgvB
+oQ00hGIMTO32eCbOYBniLdpMpyogn/v79Xt2CRxDDQA1dAZsX161ca81wSUTd+f8
+Ajsl+zXGj6t9x8Obt+FxEuUwCrJ8MTVEfFb8yZRtINwBHKJ06QK3Q7sraPLyzT9s
+goKDJV2aALLvY6SoDdo9
+=2ETM
 -----END PGP SIGNATURE-----
