@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/oauth2client
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/oauth2client/ChangeLog,v 1.3 2014/12/30 17:43:38 maekke Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/oauth2client/ChangeLog,v 1.4 2015/01/27 22:05:54 vapier Exp $
+
+*oauth2client-1.4.6 (27 Jan 2015)
+
+  27 Jan 2015; Mike Frysinger <vapier@gentoo.org> +oauth2client-1.4.6.ebuild:
+  Version bump.
 
   30 Dec 2014; Markus Meier <maekke@gentoo.org> oauth2client-1.4.2.ebuild:
   add ~arm, bug #531816
@@ -13,4 +18,3 @@
   06 Dec 2014; Justin Lecher <jlec@gentoo.org> +oauth2client-1.4.2.ebuild,
   +metadata.xml:
   New addition, written by me
-
